[gd_scene load_steps=2 format=3 uid="uid://csaq5dkv13xif"]

[ext_resource type="Script" path="res://scenes/login/Login.gd" id="1_login"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_login")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/LoginPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/LoginPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MMO RPG - Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Username:"

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter username"

[node name="PasswordLabel" type="Label" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter password"
secret = true

[node name="Spacer2" type="Control" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LoginButton" type="Button" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Register New Account"

[node name="Spacer3" type="Control" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/LoginPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CenterContainer/LoginPanel/MarginContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="CenterContainer/LoginPanel/MarginContainer/VBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_completed"]
